--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Safal Khanal
-  description: Developer
+  description: Ansible role to install docker
   company: Respiro Pvt Ltd
 
   # If the issue tracker for your role is not on github, uncomment the
